@@ -1,2 +1,5 @@
+[B]Version 1.0.1[/B]
+- Updated to danishaddons module 1.1.0
+
 [B]Version 1.0.0[/B]
 - Initial version
